maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:34: error: recursive variable i needs type
  var i=i
        ^